# Tweakr

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  citation_response.py  clean_categories.py  dummy_document.docx  dump.json  eslint.config.mjs  health_check.py  index.html  koyeb.yaml  main.ipynb  main.py  package-lock.json  package.json  papers_data.csv  pyproject.toml  render.yaml  requirements.txt  temp.py  test.py  test.txt  update_categories.py
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 06cab873e25b_added_faq_table.py  0ba555b5dfbe_updated_the_papers_models.py  0c1b3ad4c625_updated_the_papers_models_to_add_indexes.py  0ffd8d43fece_updated_the_papers_models_to_add_indexes.py  23f3b704f512_turn_json_array.py  3e63593fb409_initial_migrate.py  499d81136ac8_added_oauth_table.py  511cce1c170a_added_faqs_table.py  61a6baffdfa6_inital_migration.py  639776eed1bf_fixe.py  c2cc7c5caa74_added_the_authors_field.py  c55183dc24b2_feat_added_the_url_to_the_models.py  d3d83fc1bc9e_initial_migrations.py  d8e9225250ff_added_the_user_models.py  f3658e98c0b8_updated_the_papers_models_to_add_the_.py
api/utils/: settings.py
app/: QueryProvider.tsx  app.py  globals.css  layout.tsx  main.py  mongo_vector_store.py  page.tsx  streamlit_app.py
app/auth/: models.py
app/components/: Benefit.tsx  CitationIsReadyModal.tsx  CitationPerfectionAchieve.tsx  CitationReferencesBox.tsx  CitationSuggestionBox.tsx  CitattionCustomizationStation.tsx  CostBreakDown.tsx  CreateAccountModal.tsx  FAQs.tsx  Hero.tsx  (+8 more)
data-pipeline/: arxiv_search.py  main.py  process_document.py
datapipeline/: Dockerfile.pipeline  deploy_pipeline.py  koyeb.yaml  main.py  process_document.py  requirements.txt  routes.py  streamlit_app.py
deployment/: Dockerfile  Dockerfile.main
hooks/: annotateTextWithCitations.ts
lib/: NoScreenShot.tsx  disableScreenShot.ts  documentProcessor.ts  gtag.ts
public/: manifest.json
scripts/: export_path.sh  pipeline.sh  setup.sh  streamlit.sh
service/: citationService.ts  subscriptionService.ts
src/: App.tsx
(+75 files in other folders)
