[tool.poetry]
name = "tweakr-mvp"
version = "0.1.0"
description = "Project Tweakr"
authors = ["mannyuncharted <omoebun52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
psycopg2-binary = "^2.9.10"
pinecone-client = "^5.0.1"
openai = "^1.54.4"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.1"
arxiv = "^2.1.3"
langchain-community = "^0.3.8"
pymupdf = "1.20.2"
pymongo = {extras = ["srv"], version = "^4.10.1"}
langchain-mongodb = "^0.2.0"
langchain-openai = "^0.2.10"
alembic = "^1.14.0"
langchain-google-genai = "^2.0.6"
python-docx = "^1.1.2"
spacy = "^3.8.3"
nltk = "^3.9.1"
pydantic = "^2.10.4"
pyarrow = "^18.1.0"
streamlit = "^1.41.1"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
logfire = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
